[package]
name = "marpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "marpc-macros"
]

[features]
server = [ "inventory", "marpc-macros/server" ]
client = [ "marpc-macros/client" ]

[dependencies]
inventory = { version = "0.3", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
marpc-macros = { path = "marpc-macros" }

[dev-dependencies]
pollster = "0.3"
