[package]
name = "marpc"
version = "0.1.0"
edition = "2021"
authors = ["Birk Tjelmeland <git@birktj.no>"]
description = "Macro based, boilerplate-free rpc library"
readme = "README.md"
homepage = "https://github.com/birktj/marpc"
repository = "https://github.com/birktj/marpc"
documentation = "https://docs.rs/marpc"
license = "MIT OR Apache-2.0"
keywords = ["rpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "marpc-macros"
]

[features]
server = [ "inventory", "marpc-macros/server" ]
client = [ "marpc-macros/client" ]

[dependencies]
inventory = { version = "0.3", optional = true }
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
marpc-macros = { version = "=0.1.0", path = "marpc-macros" }

[dev-dependencies]
pollster = "0.3"
tokio = { version = "1.29", features = [ "rt", "macros", "net", "io-util" ] }
