[package]
name = "marpc-macros"
version = "0.2.0"
edition = "2021"
authors = ["Birk Tjelmeland <git@birktj.no>"]
description = "Implementation of the #[rpc] macro for marpc"
readme = "crates-io.md"
homepage = "https://github.com/birktj/marpc"
repository = "https://github.com/birktj/marpc"
documentation = "https://docs.rs/marpc-macros"
license = "MIT OR Apache-2.0"
keywords = ["rpc"]

[features]
server = []
client = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
